<resources>
    <string name="app_name">CrickCounter</string>
    <string name="team_a">Team A</string>
    <string name="slash">/</string>
    <string name="reset">RESET</string>
    <string name="_0">0</string>
    <string name="two_s">Two\'s</string>
    <string name="four_s">Four\'s</string>
    <string name="six_s">Six\'s</string>
    <string name="overview">Overview</string>
    <string name="wicket_1">+1 Wicket</string>
    <string name="_6_runs">+6 Runs</string>
    <string name="_4_runs">+4 Runs</string>
    <string name="_2_runs">+2 Runs</string>
    <string name="_1_run">+1 Run</string>
    <string name="team_b">Team B</string>
    <string name="reset_score">Reset score</string>
    <string name="reset_score_dialog">Reset score?</string>
    <string name="cancel">Cancel</string>
    <string name="_1_no_ball">+1 No ball</string>
    <string name="_1_wide_ball">+1 Wide Ball</string>
    <string name="_1_dot_ball">+1 Dot Ball</string>
    <string name="no_s">No\'s</string>
    <string name="wide_s">Wide\'s</string>
    <string name="dot_s">Dot\'s</string>
</resources>